   initialized by the code generated by the compiler.  This change does not impact
   the functionality of the codebase, it merely reduces the number of emitted
   warnings (reorder warning) displayed by recent versions of gcc.

-- added an OE version number to "openeaagles/config.h"

--------------------------------------------------------------------------------
basic

   Identifier class
      1) Modified to insure a single word (i.e., no spaces); any spaces are
      replaced with underscores.

   String class
      1) Changed the manipulator (set) functions to virtual

--------------------------------------------------------------------------------
basicGL


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
gui-glut

--------------------------------------------------------------------------------
maps

-- general cleanup of classes and code (removal of tabs, docs, etc)

   CadrgMap class
      1) fixed a bug in findBestZone() method

--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   AutoPilot class
      1) added several new slots that define default pilot flight actions or 
         characteristics, such as the maximum rate of turn, bank angle, max
         climb, etc.  These are pilot characteristics in defining how a plane
         is flown -- not physical performance characteristics associated with
         the vehicle itself.

   AngleOnlyTrackManager class
      1) initialized a few previously uninitialized variables -- the initialization
         didn't matter, but we like to adhere to coding stds.

   DynamicsModels class
      1) set commanded heading, velocity, and altitude now take additional