@@ -1,7 +1,7 @@
 //------------------------------------------------------------------------------
 // Class: MulticastHandler
 //------------------------------------------------------------------------------
-#ifndef	__Eaagles_Basic_MulticastHandler_H__
+#ifndef __Eaagles_Basic_MulticastHandler_H__
 #define __Eaagles_Basic_MulticastHandler_H__
 
 #include "openeaagles/basic/NetHandler.h"
@@ -105,3 +105,4 @@ private:
 } // End Eaagles namespace
 
 #endif
+
